checkstyle fixes to test/bulkscan